--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -34,19 +34,18 @@
         margin: 0;
         padding: 0;
         font-family: Arial, sans-serif;
-        color: #fff; /* Ensures text is white */
+        color: #fff; 
     }
     .btn-small {
-        width: 150px; /* Or any size you prefer */
-        padding: 1px 1px; /* Adjust padding */
-        font-size: 14px; /* Adjust font size */
+        width: 150px; 
+        padding: 1px 1px; 
     }
     .form-control {
-        width: 100%;          /* Full width */
-        padding: 10px;       /* Add padding for better appearance */
-        border-radius: 25px; /* Rounded corners */
-        border: 1px solid #ced4da; /* Optional: border styling */
-        box-shadow: none;    /* Optional: remove shadow if needed */
-        transition: border-color 0.3s; /* Optional: smooth transition for focus */
+        width: 100%;          
+        padding: 10px;       
+        border-radius: 25px; 
+        border: 1px solid #ced4da; 
+        box-shadow: none;    
+        transition: border-color 0.3s; 
     }
 }
