--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -1,4 +1,4 @@
-
+/* 
 .navbar {
     display: flex;
     justify-content: space-between;
@@ -26,4 +26,4 @@
       margin: 10px;  
     }
   }
-  
+   */
